--- a/ppl/package.json
+++ b/ppl/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "image-to-base64": "^2.0.1",
+    "cors": "^2.8.5",
+    "dropzone": "^5.5.1",
+    "mongoose": "^5.6.4",
+    "multer": "^1.4.1",
+    "nodemailer": "^6.3.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.1"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
